--- a/blog/files/sta302.tex
+++ b/blog/files/sta302.tex
@@ -168,7 +168,7 @@
 	
 	\maketitle
 	
-	STA302F in Summer 2022 with Mohammad Khan. Feel free to email  \href{mailto://anton.sugolov@mail.utoronto.ca}{\bf anton.sugolov@mail.utoronto.ca} if there are any mistakes, or edit the tex \href{https://sugolov.github.io/blog/files/sta302.pdf}{\bf here}.
+	STA302F in Summer 2022 with Mohammad Khan. Feel free to email  \href{mailto://anton.sugolov@mail.utoronto.ca}{\bf anton.sugolov@mail.utoronto.ca} if there are any mistakes, or edit the tex \href{https://sugolov.github.io/blog/files/sta302.tex}{\bf here}.
 	
 	\tableofcontents
 
